syntax = "proto3";

package transcribe;

service TranscribeService {
  rpc Vad (RecognizeRequest) returns (VadResponse) {}                   // Распознавание интервалов активной речи
  rpc Transcribe (RecognizeRequest) returns (TranscribeResponse) {}     // Распознавание (транскрибация) речи
}

message VadResponse {
  repeated SpeechInterval intervals = 1;  // Интервалы с активной речью
}

message TranscribeResponse {
  repeated Phrase phrases = 1;            // Отдельные фразы в тексте
  string text = 2;                        // Весь распознанный текст
}

message Phrase {
  string text = 1;                        // Фраза целиком
  repeated Word words = 2;                // Список отдельных слов внутри фразы
}

message SpeechInterval {
  double start_s = 1;                     // Временная метка начала речи (second)
  double end_s = 2;                       // Временная метка конца слова (second)
}

message Word {
  string word = 1;                        // Отдельное слово внутри фразы
  int64 start_ms = 2;                     // Временная метка начала слова (millisecond)
  int64 end_ms = 3;                       // Временная метка конца слова (millisecond)
}

message RecognizeRequest {
  AudioConfig config = 1;                 // Конфигурация для распознавания
  bytes content = 2;                      // Аудио в виде массива байт
}

message AudioConfig {
  uint32 sample_rate = 1;                 // Частота дискретизации (Гц)
  uint32 max_alternatives = 2;            // Максимальное количество альтернатив
  bool split_into_phrases = 3;            // Включить (отключить) разбивку на фразы
  AudioType audio_type = 4;               // Формат аудиофайла
}

enum AudioType {
  UNSPECIFIED = 0;                        // Формат аудио не определен
  WAV_PCM_S16LE = 1;                      // Формат аудио — WAV с 16-битным PCM и little-endian байтовым порядком
  RAW_PCM_S16LE = 2;                      // Формат аудио — RAW с 16-битным PCM и little-endian байтовым порядком
  RAW_PCM_S16BE = 3;                      // Формат аудио — RAW с 16-битным PCM и big-endian байтовым порядком
}
